--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         /* Custom CSS */
         body {
@@ -19,7 +20,7 @@
         }
         .swiper {
             width: 100%;
-            height: 70vh; /* 增加高度 */
+            height: 70vh;
         }
         .swiper-slide {
             position: relative;
@@ -30,7 +31,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            filter: brightness(0.7); /* 稍微降低图片亮度以突出文字 */
+            filter: brightness(0.7);
         }
         .swiper-slide-content {
             position: absolute;
@@ -87,7 +88,6 @@
         .fade-in.visible {
             opacity: 1;
         }
-        /* ... 其他样式保持不变 ... */
         #learning-resources .card {
             transition: transform 0.3s ease-in-out;
         }
@@ -110,6 +110,33 @@
         }
         #learning-resources a:hover {
             text-decoration: underline;
+        }
+        pre {
+            background-color: #f6f8fa;
+            border-radius: 3px;
+            padding: 16px;
+            overflow: auto;
+        }
+        code {
+            font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+            font-size: 85%;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 24px;
+            margin-bottom: 16px;
+            font-weight: 600;
+            line-height: 1.25;
+        }
+        h1 { font-size: 2em; }
+        h2 { font-size: 1.5em; }
+        h3 { font-size: 1.25em; }
+        #notes-content {
+            display: none;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -173,7 +200,7 @@
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">Java 学习笔记</h5>
                             <p class="card-text">基于W3Schools的Java教程整理的学习笔记，涵盖Java基础知识和面向对象编程概念。</p>
-                            <a href="projects/java_notes.md" class="btn btn-primary mt-auto" target="_blank">查看笔记</a>
+                            <a href="#" class="btn btn-primary mt-auto" onclick="showNotes()">查看笔记</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +208,6 @@
             </div>
         </section>
 
-        <!-- 在 portfolio 部分之后添加 -->
         <section id="learning-resources" class="mb-5 fade-in">
             <h2>学习资源</h2>
             <div class="row">
@@ -254,6 +280,8 @@
                 </div>
             </div>
         </section>
+
+        <div id="notes-content"></div>
     </div>
 
     <footer class="bg-light py-4">
@@ -345,6 +373,19 @@
             chatHistory.appendChild(messageDiv);
             chatHistory.scrollTop = chatHistory.scrollHeight;
             hljs.highlightAll();
+        }
+
+        function showNotes() {
+            fetch('projects/java_notes.md')
+                .then(response => response.text())
+                .then(text => {
+                    document.getElementById('notes-content').innerHTML = marked.parse(text);
+                    document.getElementById('portfolio').style.display = 'none';
+                    document.getElementById('learning-resources').style.display = 'none';
+                    document.getElementById('skills').style.display = 'none';
+                    document.getElementById('ai-chat').style.display = 'none';
+                    document.getElementById('notes-content').style.display = 'block';
+                });
         }
     </script>
 </body>
