修改了图标大小，增加了学习资源内容

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
             <div class="row portfolio-grid">
                 <div class="col-md-4 portfolio-item" data-category="java">
                     <div class="card">
-                        <img src="image/e9cab3a490d6f01b1820426c82ae2f232a267dfe.jpg" class="card-img-top" alt="Java Notes">
+                        <img src="image/e9cab3a490d6f01b1820426c82ae2f232a267dfe.jpg" class="card-img-top java-icon" alt="Java Notes">
                         <div class="card-body">
                             <h5 class="card-title">Java 学习笔记</h5>
                             <p class="card-text">基于W3Schools的Java教程整理的学习笔记，涵盖Java基础知识和面向对象编程概念。</p>
