--- a/index.html
+++ b/index.html
@@ -3,112 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>虎平安的个人网站</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <title>我的编程世界 - 个人主页</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-numbers/prism-line-numbers.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-numbers/prism-line-numbers.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">虎平安</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">首页</a></li>
-                    <li class="nav-item"><a class="nav-link" href="portfolio.html">作品</a></li>
-                    <li class="nav-item"><a class="nav-link" href="resources.html">学习资源</a></li>
-                    <li class="nav-item"><a class="nav-link" href="skills.html">技能</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ai-chat.html">AI聊天</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="logo">My<span>Code</span>World</div>
+            <ul>
+                <li><a href="#home">首页</a></li>
+                <li><a href="#about">关于</a></li>
+                <li><a href="#projects">项目</a></li>
+                <li><a href="#blog">博客</a></li>
+                <li><a href="#contact">联系</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <section id="home" class="hero">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img src="image/微信图片_20240930105842.jpg" alt="Photo 1">
-                    <div class="swiper-slide-content">
-                        <h2 class="swiper-slide-title">欢迎来到我的世界</h2>
-                        <p class="swiper-slide-subtitle">探索、创新、成长</p>
+    <main>
+        <section id="home" class="hero">
+            <div class="slider">
+                <div class="slide">
+                    <img src="image/微信图片_20240930105842.jpg" alt="Slide 1">
+                    <div class="slide-content">
+                        <h2>欢迎来到我的编程世界</h2>
+                        <p>探索 • 创新 • 分享</p>
                     </div>
                 </div>
-                <div class="swiper-slide">
-                    <img src="image/微信图片_20240930105848.jpg" alt="Photo 2">
-                    <div class="swiper-slide-content">
-                        <h2 class="swiper-slide-title">技术与艺术的交融</h2>
-                        <p class="swiper-slide-subtitle">编码创造无限可能</p>
+                <div class="slide">
+                    <img src="image/微信图片_20240930105848.jpg" alt="Slide 2">
+                    <div class="slide-content">
+                        <h2>Java 开发专家</h2>
+                        <p>专注于创建高效、可靠的应用</p>
                     </div>
                 </div>
-                <div class="swiper-slide">
-                    <img src="image/微信图片_20240930105955.jpg" alt="Photo 3">
-                    <div class="swiper-slide-content">
-                        <h2 class="swiper-slide-title">持续学习，不断进步</h2>
-                        <p class="swiper-slide-subtitle">每一天都是新的开始</p>
-                    </div>
-                </div>
+                <!-- 删除了第三张轮播图 -->
             </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-        </div>
-    </section>
+            <a href="#projects" class="cta-button">查看我的项目</a>
+        </section>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="social-icons">
-                <!-- 添加社交媒体图标 -->
+        <section id="about" class="about">
+            <h2>关于我</h2>
+            <div class="about-content">
+                <img src="image/微信图片_20240930105955.jpg" alt="虎平安的照片" class="profile-image">
+                <div class="about-text">
+                    <p>你好，我是虎平安，一位充满激情的全栈开发工程师和IT领域的探索者。作为一名技术爱好者，我在软件开发、系统架构和人工智能等领域都有浓厚的兴趣。我的编程之旅始于2022年，至今已经积累了丰富的经验和广泛的技术栈。</p>
+                    <h3>专业技能</h3>
+                    <ul>
+                        <li>编程语言：精通Java、Python、JavaScript，熟悉C++和Go</li>
+                        <li>Web开发：深度掌握Spring Boot、React、Node.js等框架</li>
+                        <li>数据库：精通MySQL、MongoDB，有Redis优化经验</li>
+                        <li>人工智能：有丰富的机器学习和深度学习项目经验</li>
+                        <li>大数据：熟悉Hadoop生态系统，有Spark开发经验</li>
+                    </ul>
+                    <h3>兴趣爱好</h3>
+                    <p>除了编码，我还热衷于：</p>
+                    <ul>
+                        <li>参与开源项目，为开发者社区贡献代码</li>
+                        <li>研究最新的技术趋势，如量子计算和边缘计算</li>
+                        <li>通过技术博客和视频教程分享知识</li>
+                        <li>参加黑客马拉松，挑战自我，激发创新</li>
+                        <li>业余时间学习音乐制作，探索技术与艺术的结合</li>
+                    </ul>
+                    <h3>未来展望</h3>
+                    <p>我坚信技术能够改变世界，并致力于创造有意义的项目来解决实际问题。我的目标是不断学习和成长，成为一名优秀的开发者，同时为技术社区做出贡献。</p>
+                    <p>欢迎探索我的编程世界，一起讨论技术、创新和未来！如果你对我的项目感兴趣，或者想要交流学习，请随时与我联系。</p>
+                </div>
             </div>
-            <p>&copy; 2023 虎平安. All rights reserved.</p>
+        </section>
+
+        <section id="projects" class="projects">
+            <h2>我的项目</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <div class="project-icon">
+                        <img src="image/e9cab3a490d6f01b1820426c82ae2f232a267dfe.jpg" alt="JAVA">
+                    </div>
+                    <h3>JAVA</h3>
+                    <p>深入探讨 Java 编程语言，包括核心概念、高级特性和最佳实践。</p>
+                    <a href="java_notes.html" class="project-link">开始学习</a>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">
+                        <img src="image/u=3275321479,3733831914&fm=253&fmt=auto&app=138&f=JPEG.webp" alt="Python">
+                    </div>
+                    <h3>Python 学习笔记</h3>
+                    <p>全面介绍 Python 编程语言，从基础语法到高级应用。</p>
+                    <a href="python_notes.html" class="project-link">开始学习</a>
+                </div>
+                <div class="project-card">
+                    <div class="project-icon">
+                        <img src="image/articles-2021-03-KBVL3hxg6050ad6d0d197.jpg" alt="C++">
+                    </div>
+                    <h3>C++ 学习笔记</h3>
+                    <p>深入学习 C++ 编程语言，掌握面向对象编程和高性能计算。</p>
+                    <a href="cpp_notes.html" class="project-link">开始学习</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="blog" class="blog">
+            <h2>最新博客</h2>
+            <div class="blog-posts">
+                <article class="blog-post">
+                    <h3>Java 8 Lambda表达式详解</h3>
+                    <p>探索Java 8引入的Lambda表达式，了解如何简化代码并提高效率。</p>
+                    <a href="#" class="read-more">阅读全文</a>
+                </article>
+                <article class="blog-post">
+                    <h3>深入理解Spring Boot自动配置</h3>
+                    <p>揭秘Spring Boot的自动配置魔法，学习如何自定义和优化你的应用。</p>
+                    <a href="#" class="read-more">阅读全文</a>
+                </article>
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <h2>联系我</h2>
+            <form id="contact-form">
+                <input type="text" name="name" placeholder="您的姓名" required>
+                <input type="email" name="email" placeholder="您的邮箱" required>
+                <textarea name="message" placeholder="您的留言" required></textarea>
+                <button type="submit">发送消息</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <div class="social-links">
+            <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
+        <p>&copy; 2023 MyCodeWorld. All rights reserved.</p>
     </footer>
 
-    <button id="backToTop" class="back-to-top">
-        <i class="fas fa-arrow-up"></i>
-    </button>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.14/lottie.min.js"></script>
-    <script src="script.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            AOS.init({
-                duration: 1000,
-                once: true
-            });
-
-            new Swiper(".mySwiper", {
-                slidesPerView: 1,
-                spaceBetween: 30,
-                loop: true,
-                pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true,
-                },
-                navigation: {
-                    nextEl: ".swiper-button-next",
-                    prevEl: ".swiper-button-prev",
-                },
-                autoplay: {
-                    delay: 5000,
-                    disableOnInteraction: false,
-                },
+        $(document).ready(function(){
+            $('.slider').slick({
+                autoplay: true,
+                autoplaySpeed: 5000,
+                dots: true,
+                arrows: false,
+                infinite: true,
+                speed: 500,
+                fade: true,
+                cssEase: 'linear'
             });
         });
     </script>
