--- a/java_notes.html
+++ b/java_notes.html
@@ -3,98 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java 学习笔记</title>
+    <title>Java 笔记 - 我的编程世界</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css">
     <style>
-        .w3-sidebar {
-            width: 220px;
-            background-color: #E7E9EB;
-            color: #000;
-            position: fixed;
-            height: 100%;
+        .notes-container {
+            display: flex;
+            margin-top: 60px;
+            height: calc(100vh - 60px);
+        }
+        .sidebar {
+            width: 250px;
+            padding: 20px;
+            background-color: #f0f0f0;
+            overflow-y: auto;
+            border-right: 1px solid #ddd;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 20px;
             overflow-y: auto;
         }
-        .w3-bar-item {
-            padding: 2px 1px 1px 16px;
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .sidebar li {
+            margin-bottom: 10px;
+        }
+        .sidebar a {
             text-decoration: none;
+            color: #333;
             display: block;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
         }
-        .w3-bar-item:hover {
-            background-color: #cccccc;
-            color: #000;
-        }
-        .w3-main {
-            margin-left: 220px;
-        }
-        .w3-theme {
-            color: #fff !important;
-            background-color: #04AA6D !important;
+        .sidebar a:hover, .sidebar a.active {
+            background-color: #ddd;
         }
         #content {
-            padding: 16px;
+            max-width: 800px;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
-    <div class="w3-sidebar w3-bar-block">
-        <h3 class="w3-bar-item">Java 笔记</h3>
-        <div id="menulist">
-            <a href="projects/java_home.html" class="w3-bar-item w3-button">Java HOME</a>
-            <a href="projects/java_intro.html" class="w3-bar-item w3-button">Java 简介</a>
-            <a href="projects/java_getstarted.html" class="w3-bar-item w3-button">Java 入门</a>
-            <a href="projects/java_syntax.html" class="w3-bar-item w3-button">Java 语法</a>
-            <a href="projects/java_output.html" class="w3-bar-item w3-button">Java 输出</a>
-            <a href="projects/java_comments.html" class="w3-bar-item w3-button">Java 注释</a>
-            <a href="projects/java_variables.html" class="w3-bar-item w3-button">Java 变量</a>
-            <a href="projects/java_data_types.html" class="w3-bar-item w3-button">Java 数据类型</a>
-            <a href="projects/java_type_casting.html" class="w3-bar-item w3-button">Java 类型转换</a>
-            <a href="projects/java_operators.html" class="w3-bar-item w3-button">Java 运算符</a>
-            <a href="projects/java_strings.html" class="w3-bar-item w3-button">Java 字符串</a>
-            <a href="projects/java_math.html" class="w3-bar-item w3-button">Java 数学</a>
-            <a href="projects/java_booleans.html" class="w3-bar-item w3-button">Java 布尔</a>
-            <a href="projects/java_if_else.html" class="w3-bar-item w3-button">Java If...Else</a>
-            <a href="projects/java_switch.html" class="w3-bar-item w3-button">Java Switch</a>
-            <a href="projects/java_while_loop.html" class="w3-bar-item w3-button">Java While 循环</a>
-            <a href="projects/java_for_loop.html" class="w3-bar-item w3-button">Java For 循环</a>
-            <a href="projects/java_break_continue.html" class="w3-bar-item w3-button">Java Break/Continue</a>
-            <a href="projects/java_arrays.html" class="w3-bar-item w3-button">Java 数组</a>
-        </div>
+    <header>
+        <nav>
+            <div class="logo">My<span>Code</span>World</div>
+            <ul>
+                <li><a href="index.html#home">首页</a></li>
+                <li><a href="index.html#about">关于</a></li>
+                <li><a href="index.html#projects">项目</a></li>
+                <li><a href="index.html#blog">博客</a></li>
+                <li><a href="index.html#contact">联系</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="notes-container">
+        <aside class="sidebar">
+            <h3>Java 笔记目录</h3>
+            <ul id="toc"></ul>
+        </aside>
+        <main class="content">
+            <div id="content"></div>
+        </main>
     </div>
 
-    <div class="w3-main">
-        <div class="w3-container w3-theme">
-            <h1>Java Tutorial</h1>
-        </div>
-
-        <div id="content">
-            <!-- 内容将通过 JavaScript 动态加载 -->
-        </div>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-java.min.js"></script>
     <script>
-        function loadContent(url) {
-            fetch(url)
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById('content').innerHTML = html;
+        const notes = [
+            { title: "Java HOME", file: "java_home.md" },
+            { title: "Java 简介", file: "java_intro.md" },
+            { title: "Java 入门", file: "java_getstarted.md" },
+            { title: "Java 语法", file: "java_syntax.md" },
+            { title: "Java 输出", file: "java_output.md" },
+            { title: "Java 注释", file: "java_comments.md" },
+            { title: "Java 变量", file: "java_variables.md" },
+            { title: "Java 数据类型", file: "java_data_types.md" },
+            { title: "Java 类型转换", file: "java_type_casting.md" },
+            { title: "Java 运算符", file: "java_operators.md" },
+            { title: "Java 字符串", file: "java_strings.md" },
+            { title: "Java 数学", file: "java_math.md" },
+            { title: "Java 布尔值", file: "java_booleans.md" },
+            { title: "Java If...Else", file: "java_if_else.md" },
+            { title: "Java Switch", file: "java_switch.md" },
+            { title: "Java While 循环", file: "java_while_loop.md" },
+            { title: "Java For 循环", file: "java_for_loop.md" },
+            { title: "Java 数组", file: "java_arrays.md" }
+        ];
+
+        const tocElement = document.getElementById('toc');
+        notes.forEach(note => {
+            const li = document.createElement('li');
+            const a = document.createElement('a');
+            a.href = '#';
+            a.textContent = note.title;
+            a.onclick = (e) => {
+                e.preventDefault();
+                loadContent(note.file);
+                document.querySelectorAll('.sidebar a').forEach(el => el.classList.remove('active'));
+                a.classList.add('active');
+            };
+            li.appendChild(a);
+            tocElement.appendChild(li);
+        });
+
+        function loadContent(file) {
+            console.log('Attempting to load:', file);
+            fetch(`projects/${file}`)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return response.text();
+                })
+                .then(content => {
+                    console.log('Content loaded:', content.substring(0, 100) + '...');
+                    const htmlContent = marked.parse(content);
+                    document.getElementById('content').innerHTML = htmlContent;
+                    Prism.highlightAll();
                 })
                 .catch(error => {
-                    console.error('Error loading content:', error);
-                    document.getElementById('content').innerHTML = '<p>加载内容时出错。请稍后再试。</p>';
+                    console.error('There was a problem with the fetch operation:', error.message);
+                    document.getElementById('content').innerHTML = `<p>Error loading content: ${error.message}</p>`;
                 });
         }
 
-        document.querySelectorAll('#menulist a').forEach(link => {
-            link.addEventListener('click', function(e) {
-                e.preventDefault();
-                loadContent(this.getAttribute('href'));
-                document.querySelectorAll('#menulist a').forEach(a => a.classList.remove('active'));
-                this.classList.add('active');
-            });
-        });
-
-        // 默认加载 Java HOME 页面
-        loadContent('projects/java_home.html');
+        // 默认加载第一个笔记
+        loadContent(notes[0].file);
     </script>
 </body>
 </html>
