--- a/projects/java_arrays.html
+++ b/projects/java_arrays.html
@@ -5,97 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java 数组</title>
     <link rel="stylesheet" href="../styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
-    <h1>Java 数组</h1>
-    
-    <p>数组是 Java 中用于存储多个同类型值的容器对象。它们在内存中是连续存储的，可以通过索引快速访问元素。</p>
+    <div id="content"></div>
 
-    <h2>1. 声明数组</h2>
-    <p>在 Java 中，有两种方式声明数组：</p>
-    <pre><code class="language-java">
-// 方式 1
-dataType[] arrayName;
-
-// 方式 2
-dataType arrayName[];
-    </code></pre>
-    <p>例如：</p>
-    <pre><code class="language-java">
-int[] numbers;
-String[] names;
-    </code></pre>
-
-    <h2>2. 创建数组</h2>
-    <p>声明数组后，需要创建数组对象并指定其大小：</p>
-    <pre><code class="language-java">
-numbers = new int[5]; // 创建一个可以存储 5 个整数的数组
-names = new String[10]; // 创建一个可以存储 10 个字符串的数组
-    </code></pre>
-
-    <h2>3. 初始化数组</h2>
-    <p>可以在创建数组时直接初始化：</p>
-    <pre><code class="language-java">
-int[] numbers = {1, 2, 3, 4, 5};
-String[] fruits = {"Apple", "Banana", "Orange"};
-    </code></pre>
-
-    <h2>4. 访问数组元素</h2>
-    <p>使用索引访问数组元素，索引从 0 开始：</p>
-    <pre><code class="language-java">
-int[] numbers = {10, 20, 30, 40, 50};
-System.out.println(numbers[0]); // 输出 10
-System.out.println(numbers[2]); // 输出 30
-    </code></pre>
-
-    <h2>5. 修改数组元素</h2>
-    <pre><code class="language-java">
-int[] numbers = {10, 20, 30, 40, 50};
-numbers[1] = 25;
-System.out.println(numbers[1]); // 输出 25
-    </code></pre>
-
-    <h2>6. 数组长度</h2>
-    <p>使用 length 属性获取数组长度：</p>
-    <pre><code class="language-java">
-int[] numbers = {1, 2, 3, 4, 5};
-System.out.println(numbers.length); // 输出 5
-    </code></pre>
-
-    <h2>7. 遍历数组</h2>
-    <h3>7.1 使用 for 循环</h3>
-    <pre><code class="language-java">
-int[] numbers = {1, 2, 3, 4, 5};
-for (int i = 0; i < numbers.length; i++) {
-    System.out.println(numbers[i]);
-}
-    </code></pre>
-
-    <h3>7.2 使用增强 for 循环（for-each）</h3>
-    <pre><code class="language-java">
-int[] numbers = {1, 2, 3, 4, 5};
-for (int number : numbers) {
-    System.out.println(number);
-}
-    </code></pre>
-
-    <h2>8. 多维数组</h2>
-    <p>Java 支持多维数组，最常见的是二维数组：</p>
-    <pre><code class="language-java">
-int[][] matrix = {
-    {1, 2, 3},
-    {4, 5, 6},
-    {7, 8, 9}
-};
-System.out.println(matrix[1][2]); // 输出 6
-    </code></pre>
-
-    <h2>9. 注意事项</h2>
-    <ul>
-        <li>数组的大小一旦确定就不能改变。如果需要可变大小的集合，考虑使用 ArrayList。</li>
-        <li>访问数组时要注意索引范围，越界访问会导致 ArrayIndexOutOfBoundsException。</li>
-        <li>多维数组中，每个子数组的长度可以不同。</li>
-        <li>数组是引用类型，当作为参数传递时，传递的是引用，而不是数组的副本。</li>
-    </ul>
+    <script>
+        // 从 java_arrays.md 文件加载 Markdown 内容
+        fetch('java_arrays.md')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(markdown => {
+                // 使用 marked.js 将 Markdown 转换为 HTML
+                document.getElementById('content').innerHTML = marked(markdown);
+            })
+            .catch(error => {
+                console.error('There was a problem with the fetch operation:', error.message);
+                document.getElementById('content').innerHTML = '<p>Error loading content. Please try again later.</p>';
+            });
+    </script>
 </body>
 </html>
